--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<style>
+	body {
+		background: #f8f8f8;
+	}
 	textarea {
 		display: block;
 		padding: 9.5px;
